<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color"
        tools:context=".MainActivity">


    <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:text="@string/username_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_username"
            app:layout_constraintTop_toTopOf="@id/tv_username"/>

    <TextView
            android:text="@string/password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_password"
            app:layout_constraintTop_toTopOf="@id/tv_password"/>

    <!-- radio button to login as either food outlet or volunteer
    <RadioButton
            android:layout_width="30"
            android:layout_height="30"/>

    <RadioButton
            android:layout_width="30"
            android:layout_height="30"/>
     -->

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="@string/login_btn"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_vol_register"
            android:text="@string/vol_register_btn"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_fo_register"
            android:text="@string/fo_register_btn"
            app:layout_constraintEnd_toEndOf="@id/btn_vol_register"
            app:layout_constraintStart_toStartOf="@id/btn_vol_register"
            app:layout_constraintTop_toBottomOf="@id/btn_vol_register"/>

</android.support.constraint.ConstraintLayout>