<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/background_color"
        tools:context=".RegisterActivity">

    <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fo_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

    <TextView
            android:text="@string/username_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/tv_register"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_username"
            app:layout_constraintTop_toTopOf="@id/tv_username"/>

    <TextView
            android:text="@string/password_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_password"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_password"
            app:layout_constraintTop_toTopOf="@id/tv_password"/>

    <TextView
            android:text="@string/confirmpass_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_confirmpass"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="@id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_confirmpass"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_confirmpass"
            app:layout_constraintTop_toTopOf="@id/tv_confirmpass"/>

    <TextView
            android:text="@string/outlet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_outletname"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="@id/tv_confirmpass"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirmpass"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_outletname"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_outletname"
            app:layout_constraintTop_toTopOf="@id/tv_outletname"/>

    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_location"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="@id/tv_outletname"
            app:layout_constraintTop_toBottomOf="@+id/tv_outletname"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_location"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_location"
            app:layout_constraintTop_toTopOf="@id/tv_location"/>

    <TextView
            android:text="@string/contact_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contactinfo"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="@id/tv_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"/>

    <EditText
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_contactinfo"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_contactinfo"
            app:layout_constraintTop_toTopOf="@id/tv_contactinfo"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:text="@string/register_btn"
            app:layout_constraintEnd_toEndOf="@id/et_contactinfo"
            app:layout_constraintStart_toStartOf="@id/et_contactinfo"
            app:layout_constraintTop_toBottomOf="@id/et_contactinfo"/>

</android.support.constraint.ConstraintLayout>